--- a/templates/app/blog.html
+++ b/templates/app/blog.html
@@ -94,14 +94,14 @@
     <div class="container">
         <div class="row">
             <div class="footer-item col-md-3">
-                <p class="footer-item-title">Logo.co</p>
-                <p>Adress: 135 Barnard St. Brooklyn,</p>
-                <p>NY 10036, United States</p>
-                <p>Phone: 1-400-123-1234</p>
-                <p>Email: example@creativelab.com</p>
+                <p class="footer-item-title"> -- MAV Jobs -- </p>
+                <p>Adress: 63 Aviasozlaar St. Yashnobod,</p>
+                <p> Tashkent, Uzbekistan</p>
+                <p>Phone: + 9989 93 073 23 08 </p>
+                <p>Email: asadbekmirtazayev0@gmail.com</p>
             </div>
             <div class="footer-item col-md-3">
-                <p class="footer-item-title">Services</p>
+                <p class="footer-item-title"> -- Vacancies -- </p>
                 <p class="footer-text">Apps Developer</p>
                 <p>Graphic Design</p>
                 <p>Web Developer</p>
@@ -118,9 +118,9 @@
 
             <div class="copyright pt-4 text-center text-muted">
                 <p>&copy; 2022 MAV Jobs | Created by <a href="https://t.me/mirtazayev"
-                                                         title="By Mirtazayev" target="_blank">Asadbek Mirtazayev </a>
+                                                        title="Asadbek Mirtazayev" target="_blank">Asadbek
+                    Mirtazayev</a>
                 </p>
-
             </div>
         </div>
 </footer>
