--- a/templates/app/login.html
+++ b/templates/app/login.html
@@ -142,7 +142,7 @@
                                                     me</label>
                                             </div>
                                         </div>
-                                        <div class="col-auto"><a class="fs--1" href="{% url 'login_page' %}">Forgot
+                                        <div class="col-auto"><a class="fs--1" href="{% url 'forgot_password' %}">Forgot
                                             Password?</a></div>
                                     </div>
                                     <div class="mb-3">
