--- a/templates/app/register.html
+++ b/templates/app/register.html
@@ -11,7 +11,7 @@
     <!-- ===============================================-->
     <!--    Document Title-->
     <!-- ===============================================-->
-    <title>Freelance platform | Dashboard &amp; Web App Template</title>
+    <title>MAV JOBS REGISTER </title>
 
 
     <!-- ===============================================-->
