--- a/templates/app/login.html
+++ b/templates/app/login.html
@@ -11,7 +11,7 @@
     <!-- ===============================================-->
     <!--    Document Title-->
     <!-- ===============================================-->
-    <title>Freelance platform | Dashboard &amp; Web App Template</title>
+    <title>MAV JOBS LOGIN </title>
 
 
     <!-- ===============================================-->
@@ -20,7 +20,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="{% static 'app/assets/img/favicons/apple-touch-icon.png' %}">
     <link rel="icon" type="image/png" sizes="32x32" href="{% static 'app/assets/img/favicons/favicon-32x32.png' %}">
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'app/assets/img/favicons/favicon-16x16.png' %}">
-    <link rel="shortcut icon" type="image/x-icon" href="{% static 'app/assets/img/favicons/favicon.ico' %}">
+{#    <link rel="shortcut icon" type="image/x-icon" href="{% static 'app/assets/img/favicons/favicon.ico' %}">#}
     <link rel="manifest" href="{% static 'app/assets/img/favicons/manifest.json' %}">
     <meta name="msapplication-TileImage" content="{% static 'app/assets/img/favicons/mstile-150x150.png' %}">
     <meta name="theme-color" content="#ffffff">
@@ -78,7 +78,7 @@
                      style="background-image:url({% static 'app/assets/img/generic/14.jpg' %});background-position: 50% 20%;">
                 </div>
                 <!--/.bg-holder-->
-
+c
             </div>
             <div class="col-sm-10 col-md-6 px-sm-0 align-self-center mx-auto py-5">
                 <div class="row justify-content-center g-0">
